Change backround file and fix background covering full page height

--- a/css/style.css
+++ b/css/style.css
@@ -10,11 +10,14 @@ html {
 .body {
     margin: 0 auto;
     width: 500px;
-    margin-top: 100px;
-    background-image: url('../images/background-currency.png');
+    padding-top: 100px;
+    padding-bottom: 50px;
+    min-height: 100vh;
+    background-image: url('../images/background-currency.jpeg');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 .form__structure {
